<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cast"
        android:icon="@drawable/ic_cast"
        android:title="@string/cast"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/add_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_speed"
        android:title="@string/playback_speed"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_picture_in_picture"
        android:title="@string/picture_in_picture"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download_video"
        android:title="@string/download_video"
        app:showAsAction="never" />
</menu>
