<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/back"
        style="@style/both_wrap_style"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:background="?attr/homeAsUpIndicator"
        android:contentDescription="@string/navigate_back"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:paddingBottom="10dp" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:background="@drawable/search_edt_back"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/img_search"
            style="@style/both_wrap_style"
            android:layout_centerVertical="true"
            android:background="@mipmap/search"
            android:contentDescription="@null" />

        <EditText
            android:id="@+id/edt_search"
            style="@style/both_match_style"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@id/img_clear"
            android:layout_toEndOf="@id/img_search"
            android:background="@null"
            android:hint="@string/search_video_hint"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/red"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/img_clear"
            style="@style/both_wrap_style"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/search_history_clear"
            android:contentDescription="@string/clear_search"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_operate"
        style="@style/lwrap_hmatch_style"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="@android:color/white" />
</LinearLayout>
